WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96817
[WK2] webarchive/loading/javascript-url-iframe-crash.html fails
https://bugs.webkit.org/show_bug.cgi?id=96817
Summary
[WK2] webarchive/loading/javascript-url-iframe-crash.html fails
Alexey Proskuryakov
Reported
2012-09-14 12:00:14 PDT
This test got unskipped in <
http://trac.webkit.org/changeset/128585
> erroneously, because we do not dump this callback yet.
Attachments
proposed fix
(1.52 KB, patch)
2012-09-14 12:01 PDT
,
Alexey Proskuryakov
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-09-14 12:01:44 PDT
Created
attachment 164203
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-09-14 12:08:11 PDT
Committed <
http://trac.webkit.org/changeset/128638
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug