        [WK2] webarchive/loading/javascript-url-iframe-crash.html fails         https://bugs.webkit.org/show_bug.cgi?id=96817

Reviewed by Kenneth Rohde Christiansen.

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::didFailProvisionalLoadWithErrorForFrame): This callback
        got overlooked when adding logging elsewhere.



Canonical link: https://commits.webkit.org/114724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128638 268f45cc-cd09-0410-ab3c-d52691b4dbfc